--- a/Files/index.html
+++ b/Files/index.html
@@ -324,11 +324,11 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-			<a href="mailto:m.dafiri@hotmail.co.uk">
-            <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+			<a href="https://fsegitlab.wlv.ac.uk/u/1421617">
+            <i class="fab fa-gitlab fa-stack-1x fa-inverse"></i>
           </span>
 		  </a>
-          <h4 class="service-heading">GitHub</h4>
+          <h4 class="service-heading">GitLab</h4>
           
         </div>
       </div>
