--- a/Files/index.html
+++ b/Files/index.html
@@ -9,7 +9,9 @@
   <meta name="author" content="">
 
   <title>Mohammad Dafiri</title>
-
+  
+  <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
